fix: archive imported workflows by default
